--- a/app/templates/userHome.html
+++ b/app/templates/userHome.html
@@ -30,9 +30,9 @@
     <h3 class="text-muted"> Hello, {{ session['user'] }} </h3>
     
   
-
+<!--
     <div class="card">
-  
+
     <div class="card-block" >
      <h4 class="card-title">Dougnout Chart</h4>
       <canvas id="progressDougnoutChart"></canvas>
@@ -45,13 +45,14 @@
       <canvas id="skillsSpiderChart"></canvas>
     </div>
     </div>
-
+-->
+   
     <div class="card">
 
     <div class="card-block">
      <h4 class="card-title">Opportunities</h4>
       <p class="card-text">Check all volunteer opportunities available to you</p>
-      <a href="#" class="btn btn-primary">Access</a>
+      <a href="/AaronFile" class="btn btn-primary">Access</a>
     </div>
     </div>
 </div>
